--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "SimpleBotAPI\\": "src"
+            "SimpleBotAPI\\": "src/"
         }
     }
 }
