--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "muaath5/simple-bot-api",
     "description": "Simple & Easy Telegram Bot API in PHP",
-    "version": "5.3-beta",
+    "version": "5.3-RC",
     "type": "library",
     "license": "GPL-3.0-only",
     "authors": [
