Add one more example, Improvments on README

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "issues": "https://github.com/Muaath5/SimpleBotAPI/issues"
     },
     "minimum-stability": "stable",
-    "require": {},
+    "require": {
+        "php": ">=8.0"
+    },
     "autoload": {
         "psr-4": {
             "SimpleBotAPI\\": "src/"
