--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     "require": {
         "php": ">=8.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.5"
+    },
     "autoload": {
         "psr-4": {
             "SimpleBotAPI\\": "src/"
