--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -31,3 +31,7 @@ jobs:
 
     - name: Run phpunit test
       run: ./vendor/bin/phpunit test
+      env:
+        TEST_BOT_TOKEN: ${{ secrets.TEST_BOT_TOKEN }}
+        TEST_BOT_USERNAME: ${{ secrets.TEST_BOT_USERNAME }}
+          
