Partial commit, Add tests, Add bot settings, Add a lot of settings

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     },
     "autoload": {
         "psr-4": {
-            "SimpleBotAPI\\": "src/"
+            "SimpleBotAPI\\": "src/",
+            "SimpleBotAPI\\Examples\\": "examples/"
         }
     }
 }
