--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     },
     "minimum-stability": "stable",
     "require": {
-        "php": ">=8.0"
+        "php": ">=7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5"
@@ -23,6 +23,7 @@
     "autoload": {
         "psr-4": {
             "SimpleBotAPI\\": "src/",
+            "SimpleBotAPI\\Exceptions\\": "src/Exceptions/",
             "SimpleBotAPI\\Examples\\": "examples/"
         }
     }
